# cartog

./: .gitignore  .gitleaks.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  agents.md  cliff.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: queries.rs
benchmarks/: README.md  bench-project.sh  run.sh
benchmarks/fixtures/: gen_go.py  gen_rb.py  gen_rs.py  gen_ts.py  generate_fixtures.py
benchmarks/fixtures/webapp_go/: README.md  go.mod
benchmarks/fixtures/webapp_py/: README.md  app.py  config.py  exceptions.py
benchmarks/fixtures/webapp_py/api/: __init__.py
benchmarks/fixtures/webapp_py/auth/: __init__.py  middleware.py  service.py  tokens.py
benchmarks/fixtures/webapp_py/cache/: base.py  memory_cache.py  redis_cache.py
benchmarks/fixtures/webapp_py/database/: __init__.py  connection.py  migrations.py  pool.py  queries.py
benchmarks/fixtures/webapp_py/events/: __init__.py  dispatcher.py  handlers.py
benchmarks/fixtures/webapp_py/middleware/: auth_mw.py  cors.py  logging_mw.py  rate_limit.py
benchmarks/fixtures/webapp_rb/: README.md  app.rb  app_extended.rb  config.rb  config_extended.rb  exceptions.rb
benchmarks/fixtures/webapp_rs/: Cargo.toml  README.md  app_errors.rs  config.rs  error.rs  main.rs
benchmarks/fixtures/webapp_ts/: README.md
benchmarks/ground_truth/: webapp_go.json  webapp_py.json  webapp_rb.json  webapp_rs.json  webapp_ts.json
benchmarks/lib/: common.sh  compare.sh
benchmarks/scenarios/: 01_find_callers.sh  02_file_structure.sh  03_refactor_impact.sh  04_class_hierarchy.sh  05_trace_call_chain.sh  06_file_deps.sh  07_type_references.sh  08_symbol_search.sh  09_ambiguous_symbol.sh  10_high_fanout.sh  11_deep_call_chain.sh  12_deep_impact.sh  13_rag_search.sh
docs/: claude-code.md  demo.tape  linkedin-post.md  product.md  structure.md  tech.md  usage.md
scripts/: release.sh
skill/: SKILL.md
skill/references/: supported_languages.md
skill/scripts/: install.sh
skills/cartog/: SKILL.md
skills/cartog/references/: query_cookbook.md  supported_languages.md
skills/cartog/scripts/: ensure_indexed.sh  query.sh
skills/cartog/tests/: eval.sh  golden_examples.yaml  test_ensure_indexed.sh
specs/: watch.spec.md
src/: cli.rs  commands.rs  db.rs  indexer.rs  lib.rs  main.rs  mcp.rs  types.rs  watch.rs
src/languages/: go.rs  javascript.rs  js_shared.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs  typescript.rs
src/rag/: embeddings.rs  indexer.rs  mod.rs  reranker.rs  search.rs  setup.rs
tests/: rag_relevancy.rs
tests/fixtures/auth/: service.py  tokens.py
(+234 files in other folders)
