[package]
name = "cartog"
version = "0.4.0"
edition = "2021"
rust-version = "1.70"
description = "Code graph indexer for LLM coding agents. Map your codebase, navigate by graph."
license = "MIT"
repository = "https://github.com/jrollin/cartog"
keywords = ["code-analysis", "tree-sitter", "graph", "llm", "code-intelligence"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-ruby = "0.23"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha2 = "0.10"
notify = "7"
notify-debouncer-mini = "0.5"
ctrlc = "3"
anyhow = "1"
rmcp = { version = "0.5", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# RAG pipeline: semantic code search (ONNX Runtime via fastembed)
# default-features=false drops image-models (image embedding support we don't use)
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }
sqlite-vec = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "queries"
harness = false

[profile.release]
lto = "thin"
strip = "debuginfo"

# opt-level=1 because tree-sitter C grammars compile very slowly at the default level=0
[profile.dev]
opt-level = 1
